--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Kiwooma Haruna">
     <title>SlackOverflow lite | Welcome</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/UI/css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="UI/css/style.css" />
     <script src="main.js"></script>
 </head>
  <body>
