--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <nav>
                 <ul>
                     <li class="current">
-                        <a href="/UI/index.html">Home</a>
+                        <a href="UI/index.html">Home</a>
                     </li>
                     <li>
-                        <a href="/UI/loginform.html">Login</a>
+                        <a href="UI/loginform.html">Login</a>
                     </li>
                     <li>
-                        <a href="/UI/blogpage.html">Blog</a>
+                        <a href="UI/blogpage.html">Blog</a>
                     </li>
                 </ul>
             </nav>
@@ -32,7 +32,7 @@
     </header>
      <section class="signup">
          <h1>
-            <a href="/UI/signupform.html">Join Us</a>
+            <a href="UI/signupform.html">Join Us</a>
         </h1>
         <br>
          <p> Stop being a prisoner of your past. Become the architect of your future!
@@ -50,7 +50,7 @@
      </section>
      <section id="showcase">
         <div class="question">
-            <a href="/UI/loginform.html"> Ask Question</a>
+            <a href="UI/loginform.html"> Ask Question</a>
             <br>
             <h2>Recent question</h2>
             <div class="box">
