--- a/UI/blogpage.html
+++ b/UI/blogpage.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Kiwooma Haruna">
     <title>SlackOverflow lite | Blog</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
-    <script src="./js/script.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <script src="js/script.js"></script>
 </head>
 
 <body>
