--- a/UI/index.html
+++ b/UI/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Kiwooma Haruna">
     <title>SlackOverflow lite | Welcome</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 </head>
 
 <body>
