--- a/UI/loginform.html
+++ b/UI/loginform.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width">
   <meta name="author" content="Kiwooma Haruna">
   <title>SlackOverflow lite | Login</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 </head>
 
 <body>
