--- a/UI/signupform.html
+++ b/UI/signupform.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width">
   <meta name="author" content="Kiwooma Haruna">
   <title>SlackOverflow lite | Sign Up</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
-  <script src="main.js"></script>
+  <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 </head>
 
 <body>
